--- a/style/sass/layouts/_footer.scss
+++ b/style/sass/layouts/_footer.scss
@@ -4,10 +4,19 @@ footer{
     padding: 2% 0 5% 0;
     .icon{
         color: white;
+        height: 15px;
+        width: 15px;
     }
     h1{
-        font-size: 15px;
-        font-weight: 200;
-        margin-left: 5%;
+        font-size: 19px;
+        font-weight: 200;        
+        margin-left: 10%;
+    }
+    a{
+        color: white;
+    }
+    ul{
+        font-size: 17px;
+        font-weight: 500;
     }
 }
