--- a/style/css/main.css
+++ b/style/css/main.css
@@ -86,6 +86,7 @@ footer .icon {
   color: white;
   height: 15px;
   width: 15px;
+  margin-right: 2%;
 }
 footer h1 {
   font-size: 19px;
@@ -98,6 +99,9 @@ footer a {
 footer ul {
   font-size: 17px;
   font-weight: 500;
+}
+footer li {
+  margin-bottom: 1%;
 }
 
 button {
