--- a/style/sass/layouts/_footer.scss
+++ b/style/sass/layouts/_footer.scss
@@ -6,6 +6,7 @@ footer{
         color: white;
         height: 15px;
         width: 15px;
+        margin-right: 2%;
     }
     h1{
         font-size: 19px;
@@ -18,5 +19,8 @@ footer{
     ul{
         font-size: 17px;
         font-weight: 500;
+    }
+    li{
+        margin-bottom: 1%;
     }
 }
