--- a/style/sass/layouts/_headers.scss
+++ b/style/sass/layouts/_headers.scss
@@ -1,16 +1,24 @@
 header{
     display: flex;
-    flex-direction: column-reverse;
+    flex-wrap: wrap;
     .logo{
         width: 40%;
         margin: auto;
-        padding: 5% 0 2% 0;
+        padding: 5% 0 3% 0;
         justify-content: center;
     }
-    &::before{
+    &::after{
         content: "";
         height: 1px;
         width: 100%;
         box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.39);
+    }
+    //Flèche des pages menu
+    .icon{
+        color: $bgcolor-footer;
+        position: absolute;
+        height: 22px;
+        width: 22px;
+        margin: 22px 0 0 5%;
     }
 }
