--- a/style/sass/utils/_variables.scss
+++ b/style/sass/utils/_variables.scss
@@ -10,7 +10,8 @@ $bgcolor-footer: #353535;
 
 $iconcolor-primary: #7E7E7E;
 
-$shadow: 0px 5px 15px -4px #CECECE;
+//$shadow: 0px 5px 15px -4px #CECECE;
+$shadow: 0px 10px 17px -5px #DDDDDD;
 
 
 $police-title: Shrikhand; 
