--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -7,6 +7,7 @@
 @import "layouts/headers.scss";
 @import "layouts/footer.scss";
 @import "layouts/buttons.scss";
+@import "layouts/icon-heart.scss";
 
 @import "pages/index.scss";
 @import "pages/menu.scss";
