--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -19,9 +19,10 @@
                 font-size: 27px;
                 font-weight: 500;
             }
-            .icon{
-                height: 25px;
-                width: 25px;
+            .icon-heart--gradient{
+                position: absolute;
+                font-size: 23px;
+                margin: 0 0 2px 82.5%;
             }
         }
         &__categorie{
