--- a/style/css/main.css
+++ b/style/css/main.css
@@ -206,6 +206,10 @@ button:hover {
   margin-bottom: 4%;
   box-shadow: 0px 10px 17px -5px #d4d4d4;
 }
+.fonctionnement__card:hover {
+  background-color: #f2eafb;
+  transition: all 0.5s ease-in-out;
+}
 .fonctionnement__card p {
   margin: -2%;
   border-radius: 50%;
