--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -52,6 +52,10 @@
         width: 87%;
         margin-bottom: 4%;
         box-shadow: $shadow;
+        &:hover{
+            background-color: lighten($color-primary, 35);
+            transition: all 0.5s ease-in-out;
+        }
         p {
             margin: -2%;
             border-radius: 50%;
