--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -49,12 +49,15 @@
         align-items: center;
         border-radius: 20px;
         height: 75px;
-        width: 87%;
+        width: 350px;
         margin-bottom: 4%;
         box-shadow: $shadow;
         &:hover{
             background-color: lighten($color-primary, 35);
             transition: all 0.5s ease-in-out;
+            > .icon{
+                color: $color-primary;
+            }
         }
         p {
             margin: -2%;
