Correction taille boutton et ombre header

--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -20,20 +20,20 @@
     justify-content: center;
     flex-wrap: wrap;
     text-align: center;
-    padding-bottom: 10%;
+    padding-bottom: 15%;
     h2{
         width: 70%;
-        margin-bottom: 0;
+        margin: 10% 0 0 0;
     }
     p{
         width: 80%;
-        margin-top: 2%;
+        margin: 4% 0 8% 0;
     }
 }
 
 /*Fonctionnement Ohmyfood*/
 .fonctionnement{
-    padding-bottom: 10%;
+    padding: 5% 0 15% 0;
     h2{
         margin-left: 5%;
     }
