--- a/style/css/main.css
+++ b/style/css/main.css
@@ -73,7 +73,7 @@ header::after {
   content: "";
   height: 1px;
   width: 100%;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.39);
+  box-shadow: 0px 3px 6px rgba(5, 5, 5, 0.39);
 }
 header .icon {
   color: #353535;
@@ -113,10 +113,10 @@ footer li {
 button {
   background: linear-gradient(#FF79DA, #9356DC);
   color: white;
-  font-size: 19px;
+  font-size: 16px;
   border-radius: 30px;
-  height: 60px;
-  width: 250px;
+  height: 50px;
+  width: 225px;
   border: none;
   font-weight: 500;
   box-shadow: 0px 10px 17px -5px #d4d4d4;
@@ -172,20 +172,20 @@ button:hover {
   justify-content: center;
   flex-wrap: wrap;
   text-align: center;
-  padding-bottom: 10%;
+  padding-bottom: 15%;
 }
 #description_ohmyfood h2 {
   width: 70%;
-  margin-bottom: 0;
+  margin: 10% 0 0 0;
 }
 #description_ohmyfood p {
   width: 80%;
-  margin-top: 2%;
+  margin: 4% 0 8% 0;
 }
 
 /*Fonctionnement Ohmyfood*/
 .fonctionnement {
-  padding-bottom: 10%;
+  padding: 5% 0 15% 0;
 }
 .fonctionnement h2 {
   margin-left: 5%;
