Ajout de l'animation d'arrivée cards menu

--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "layouts/headers.scss";
 @import "layouts/footer.scss";
+@import "layouts/loader.scss";
 @import "layouts/buttons.scss";
 @import "layouts/icon-heart.scss";
 
