--- a/style/css/main.css
+++ b/style/css/main.css
@@ -92,7 +92,7 @@ footer .icon {
   color: white;
   height: 15px;
   width: 15px;
-  margin-right: 2%;
+  margin-right: 4%;
 }
 footer h1 {
   font-size: 19px;
@@ -347,6 +347,48 @@ button:hover {
   display: flex;
   flex-wrap: wrap;
   box-shadow: 0px 10px 17px -5px #d4d4d4;
+  -webkit-animation: plat-appear 2000ms backwards;
+          animation: plat-appear 2000ms backwards;
+}
+.menu .repas__plat--1 {
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
+}
+.menu .repas__plat--2 {
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
+}
+.menu .repas__plat--3 {
+  -webkit-animation-delay: 600ms;
+          animation-delay: 600ms;
+}
+.menu .repas__plat--4 {
+  -webkit-animation-delay: 800ms;
+          animation-delay: 800ms;
+}
+.menu .repas__plat--5 {
+  -webkit-animation-delay: 1000ms;
+          animation-delay: 1000ms;
+}
+.menu .repas__plat--6 {
+  -webkit-animation-delay: 1200ms;
+          animation-delay: 1200ms;
+}
+.menu .repas__plat--7 {
+  -webkit-animation-delay: 1400ms;
+          animation-delay: 1400ms;
+}
+.menu .repas__plat--8 {
+  -webkit-animation-delay: 1600ms;
+          animation-delay: 1600ms;
+}
+.menu .repas__plat--9 {
+  -webkit-animation-delay: 1800ms;
+          animation-delay: 1800ms;
+}
+.menu .repas__plat--10 {
+  -webkit-animation-delay: 2000ms;
+          animation-delay: 2000ms;
 }
 .menu .repas__plat h2 {
   font-size: 19px;
@@ -370,4 +412,26 @@ button:hover {
   align-items: center;
   justify-content: center;
   margin: 10% auto 10% auto;
+}
+
+@-webkit-keyframes plat-appear {
+  0% {
+    opacity: 0;
+    margin-top: 30px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+@keyframes plat-appear {
+  0% {
+    opacity: 0;
+    margin-top: 30px;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0px;
+  }
 }/*# sourceMappingURL=main.css.map */
