--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -51,6 +51,12 @@
             display: flex;
             flex-wrap: wrap;
             box-shadow: $shadow;
+            animation: plat-appear 2000ms backwards; 
+            @for $i from 1 through 10{
+                &--#{$i} {
+                    animation-delay: 200ms * $i;
+                }
+            }
             h2{
                 font-size: 19px;
                 width: 100%;
@@ -77,3 +83,15 @@
         }
     }
 }
+
+@keyframes plat-appear {
+    0% {
+        opacity: 0;
+        margin-top: 30px;
+    }
+    100% {
+        opacity: 1;
+        margin-top: 0px;
+    }
+}    
+
