--- a/style/sass/layouts/_headers.scss
+++ b/style/sass/layouts/_headers.scss
@@ -1,6 +1,7 @@
 header{
     display: flex;
     flex-wrap: wrap;
+    background-color: white;
     .logo{
         width: 40%;
         margin: auto;
