--- a/style/sass/layouts/_icon-heart.scss
+++ b/style/sass/layouts/_icon-heart.scss
@@ -4,12 +4,14 @@
     font-size: 25px;
     align-self: flex-end;
     z-index: 1;
-    &:hover{
+    &:active{
         + .icon-heart--gradient{
             opacity: 1;
             transform: scaleX(1);
             transition: transform 500ms ease-out;
         }
+        opacity: 0;
+        transition: all 400ms ease-out;
     }
     &--gradient{
         transform: scaleX(0);
