--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -34,6 +34,7 @@
 /*Fonctionnement Ohmyfood*/
 .fonctionnement{
     padding: 5% 0 15% 0;
+    background-color: white;
     h2{
         margin-left: 5%;
     }
