--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -87,11 +87,11 @@
 @keyframes plat-appear {
     0% {
         opacity: 0;
-        margin-top: 30px;
+        transform: translateY(99%);
     }
     100% {
         opacity: 1;
-        margin-top: 0px;
+        transform: translateY(0);
     }
 }    
 
