--- a/style/sass/layouts/_buttons.scss
+++ b/style/sass/layouts/_buttons.scss
@@ -1,6 +1,9 @@
 button{
     background: $color-gradient;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 16px;
     border-radius: 30px;
     height: 50px;
