--- a/style/sass/layouts/_footer.scss
+++ b/style/sass/layouts/_footer.scss
@@ -24,3 +24,43 @@ footer{
         margin-bottom: 1%;
     }
 }
+
+//Version tablette
+
+@include tablet{
+    footer{
+        ul{
+            display: flex;
+            justify-content: space-between;
+            margin-right: 5%;
+        }
+        li{
+            white-space: nowrap;
+        }
+        .icon{
+            margin-right: 10%;
+        }
+    }
+}
+
+//Version desktop
+
+@include desktop{
+    footer{
+        padding: 2% 0 1% 0;
+        h1{
+            margin: 0 0 2% 3%;
+        }
+        ul{
+            display: flex;
+            justify-content: space-between;
+            margin-right: 5%;
+        }
+        li{
+            white-space: nowrap;
+        }
+        .icon{
+            margin-right: 10%;
+        }
+    }
+}
