--- a/style/sass/layouts/_loader.scss
+++ b/style/sass/layouts/_loader.scss
@@ -7,7 +7,7 @@
         width: 100%;
         height: 100%;
         z-index: 10;
-        animation: fadeout 3s forwards;
+        animation: fadeout 4s forwards;
     }
 
     &::after {
@@ -27,7 +27,7 @@
 }
 
 @keyframes spin {
-    0% {
+    from {
         transform: rotate(0deg);
         opacity: 1;
     }
