--- a/style/sass/pages/_index.scss
+++ b/style/sass/pages/_index.scss
@@ -55,7 +55,7 @@
         box-shadow: $shadow;
         &:hover{
             background-color: lighten($color-primary, 35);
-            transition: all 0.5s ease-in-out;
+            transition: all 0.4s ease-in-out;
             > .icon{
                 color: $color-primary;
             }
@@ -138,6 +138,139 @@
             margin: 13px 0 0 253px;
             border-radius: 2px;
             box-shadow: $shadow;
+        }
+    }
+}
+
+//Version tablette 
+
+@include tablet{
+    .container_description_fonctionnement{
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        background-color: white;
+        padding-bottom: 5%;
+    }
+    #description_ohmyfood{
+        width: 50%;
+        background-color: white;
+        padding-bottom: 0;
+        h2{
+            margin-bottom: 3%;
+            width: 85%;
+        }
+        p{
+            font-size: 20px;
+            width: 85%;
+        }
+        button{
+            width: 250px;
+            height: 55px;
+            font-size: 19px;
+        }
+    }
+    .fonctionnement{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 0;
+        h2{
+            margin: 0 0 5% 0;
+        }
+    }
+    .restaurants{
+        padding-bottom: 5%;
+        h2{
+            padding-top: 5%;
+        }
+        &__container{
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;     
+        }
+        &__card{
+            margin-bottom: 8%;
+        }
+    }
+}
+
+//Version Dekstop
+
+@include desktop{
+    .container_description_fonctionnement{
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        background-color: white;
+        padding-bottom: 3%;
+    }
+    #description_ohmyfood{
+        width: 50%;
+        background-color: white;
+        padding-bottom: 0;
+        h2{
+            margin-bottom: 1%;
+            width: 85%;
+            font-size: 23px;
+        }
+        p{
+            font-size: 19px;
+            width: 85%;
+            margin: 3% 0 5% 0;
+        }
+        button{
+            width: 240px;
+            height: 50px;
+            font-size: 17px;
+        }
+    }
+    .fonctionnement{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        padding: 3% 0 0 0;
+        &__container{
+            flex-direction: column;
+            align-items: center;
+        }
+        &__card{
+            width: 500px;
+            height: 55px;
+            p{
+                margin-right: 5%;
+            }
+            .icon{
+                font-size: 17px;
+                margin-right: 10%;
+            }
+            h3{
+                font-size: 16px;
+            }
+        }
+        h2{
+            margin: 0 0 5% 17%;
+            font-size: 20px;
+        }
+    }
+    .restaurants{
+        h2{
+            padding: 3% 0 0 0;
+            font-size: 23px;
+            margin: 0 0 3% 5%;
+        }
+        &__container{
+            flex-direction: row;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        &__card{
+            width: 550px;
+            img{
+                width: 550px;
+                height: 150px;
+            }
         }
     }
 }
