--- a/style/css/main.css
+++ b/style/css/main.css
@@ -89,12 +89,20 @@ header .icon {
     width: 250px;
     height: auto;
   }
+  header .icon {
+    font-size: 30px;
+    margin: 50px 0 0 10%;
+  }
 }
 @media screen and (min-width: 992px) {
   header .logo {
     width: 240px;
     height: auto;
     padding: 2% 0 2% 0;
+  }
+  header .icon {
+    font-size: 30px;
+    margin: 35px 0 0 10%;
   }
 }
 footer {
@@ -139,15 +147,19 @@ footer li {
 }
 @media screen and (min-width: 992px) {
   footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
     padding: 2% 0 1% 0;
   }
   footer h1 {
-    margin: 0 0 2% 3%;
+    margin: 0 0 1% 3%;
   }
   footer ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-right: 5%;
+    width: 100%;
   }
   footer li {
     white-space: nowrap;
@@ -249,11 +261,11 @@ button:hover {
   align-self: flex-end;
   z-index: 1;
 }
-.icon-heart:active {
+.icon-heart:hover {
   opacity: 0;
   transition: all 400ms ease-out;
 }
-.icon-heart:active + .icon-heart--gradient {
+.icon-heart:hover + .icon-heart--gradient {
   opacity: 1;
   transform: scaleX(1);
   transition: transform 500ms ease-out;
@@ -271,17 +283,52 @@ button:hover {
           background-clip: text;
 }
 
+@media screen and (min-width: 992px) {
+  .icon-heart--gradient {
+    margin: 177px auto 20px 483px;
+  }
+}
 /*Localisation*/
-#localisation {
+.localisation {
   background-color: #EAEAEA;
   display: flex;
   width: 100%;
+  height: 55px;
   justify-content: center;
   align-items: center;
+}
+.localisation__form {
+  background-color: #EAEAEA;
+  font-size: 19px;
+  border: none;
+}
+.localisation__form::-moz-placeholder {
+  color: black;
   font-weight: 500;
 }
-#localisation .fa-location-dot {
+.localisation__form:-ms-input-placeholder {
+  color: black;
+  font-weight: 500;
+}
+.localisation__form::placeholder {
+  color: black;
+  font-weight: 500;
+}
+.localisation__form:focus {
+  outline: none;
+}
+.localisation__form:focus::-moz-placeholder {
+  color: transparent;
+}
+.localisation__form:focus:-ms-input-placeholder {
+  color: transparent;
+}
+.localisation__form:focus::placeholder {
+  color: transparent;
+}
+.localisation .fa-location-dot {
   padding-right: 15px;
+  margin-left: 20%;
 }
 
 /*Description Ohmyfood*/
@@ -412,8 +459,15 @@ button:hover {
   border-radius: 2px;
   box-shadow: 0px 10px 17px -5px #d4d4d4;
 }
+.restaurants__card:hover {
+  box-shadow: 0px 10px 17px -5px #8f8f8f;
+  transition: all 0.4s ease-in-out;
+}
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
+  .localisation .fa-location-dot {
+    margin-left: 10%;
+  }
   .container_description_fonctionnement {
     display: flex;
     flex-wrap: nowrap;
@@ -465,6 +519,9 @@ button:hover {
   }
 }
 @media screen and (min-width: 992px) {
+  .localisation .fa-location-dot {
+    margin-left: 5%;
+  }
   .container_description_fonctionnement {
     display: flex;
     flex-wrap: nowrap;
@@ -520,15 +577,19 @@ button:hover {
     margin: 0 0 5% 17%;
     font-size: 20px;
   }
+  .restaurants {
+    padding-bottom: 3%;
+  }
   .restaurants h2 {
     padding: 3% 0 0 0;
     font-size: 23px;
-    margin: 0 0 3% 5%;
+    margin: 0 0 3% 12%;
   }
   .restaurants__container {
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin: 0 7% 0 7%;
   }
   .restaurants__card {
     width: 550px;
@@ -536,6 +597,9 @@ button:hover {
   .restaurants__card img {
     width: 550px;
     height: 150px;
+  }
+  .restaurants__card--new {
+    margin: 13px 0 0 450px;
   }
 }
 .menu img {
@@ -566,14 +630,14 @@ button:hover {
   font-size: 23px;
   margin: 0 0 2px 82.5%;
 }
-.menu .repas__categorie {
+.menu .repas__categorie_plat {
   display: flex;
   flex-direction: column;
   font-weight: 100;
   font-size: 18px;
   margin-left: 5%;
 }
-.menu .repas__categorie::after {
+.menu .repas__categorie_plat::after {
   content: "";
   border-bottom: solid #99E2D0 3px;
   width: 11%;
@@ -584,7 +648,7 @@ button:hover {
   flex-flow: column wrap;
   align-items: center;
 }
-.menu .repas__plat {
+.menu .repas__card {
   background-color: white;
   border-radius: 20px;
   margin-bottom: 3%;
@@ -595,62 +659,63 @@ button:hover {
   -webkit-animation: plat-appear 2000ms backwards;
           animation: plat-appear 2000ms backwards;
 }
-.menu .repas__plat--1 {
+.menu .repas__card--1 {
   -webkit-animation-delay: 200ms;
           animation-delay: 200ms;
 }
-.menu .repas__plat--2 {
+.menu .repas__card--2 {
   -webkit-animation-delay: 400ms;
           animation-delay: 400ms;
 }
-.menu .repas__plat--3 {
+.menu .repas__card--3 {
   -webkit-animation-delay: 600ms;
           animation-delay: 600ms;
 }
-.menu .repas__plat--4 {
+.menu .repas__card--4 {
   -webkit-animation-delay: 800ms;
           animation-delay: 800ms;
 }
-.menu .repas__plat--5 {
+.menu .repas__card--5 {
   -webkit-animation-delay: 1000ms;
           animation-delay: 1000ms;
 }
-.menu .repas__plat--6 {
+.menu .repas__card--6 {
   -webkit-animation-delay: 1200ms;
           animation-delay: 1200ms;
 }
-.menu .repas__plat--7 {
+.menu .repas__card--7 {
   -webkit-animation-delay: 1400ms;
           animation-delay: 1400ms;
 }
-.menu .repas__plat--8 {
+.menu .repas__card--8 {
   -webkit-animation-delay: 1600ms;
           animation-delay: 1600ms;
 }
-.menu .repas__plat--9 {
+.menu .repas__card--9 {
   -webkit-animation-delay: 1800ms;
           animation-delay: 1800ms;
 }
-.menu .repas__plat--10 {
+.menu .repas__card--10 {
   -webkit-animation-delay: 2000ms;
           animation-delay: 2000ms;
 }
-.menu .repas__plat h2 {
+.menu .repas__card h2 {
   font-size: 19px;
   width: 100%;
   margin: 3% 0 0 4%;
 }
-.menu .repas__plat p {
-  width: 80%;
-  margin: 1% 0 3% 4%;
+.menu .repas__card p {
+  width: 82%;
+  margin: 1% 3% 3% 4%;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 18px;
 }
-.menu .repas__plat__prix {
-  width: 10% !important;
+.menu .repas__card__prix {
+  width: 5%;
   font-weight: bold;
+  margin-top: 1.5%;
 }
 .menu .repas button {
   margin: 10% auto 10% auto;
@@ -675,5 +740,67 @@ button:hover {
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .menu img {
+    height: 350px;
+  }
+  .menu .repas {
+    padding-bottom: 3%;
+  }
+  .menu .repas__titre {
+    width: 85%;
+    margin-left: 10%;
+  }
+  .menu .repas__titre .icon-heart--gradient {
+    margin: 0 0 2px 75%;
+  }
+  .menu .repas__card {
+    width: 85%;
+  }
+  .menu .repas__categorie_plat {
+    margin-left: 10%;
+  }
+  .menu .repas__categorie_plat::after {
+    width: 6%;
+  }
+  .menu .repas button {
+    margin: 5% auto 5% auto;
+  }
+}
+@media screen and (min-width: 992px) {
+  .menu img {
+    -o-object-position: 75% 75%;
+       object-position: 75% 75%;
+    height: 450px;
+  }
+  .menu .repas {
+    padding: 2% 0 5% 0;
+  }
+  .menu .repas__container_all {
+    display: flex;
+    justify-content: center;
+  }
+  .menu .repas__container--withtitles {
+    width: 30%;
+  }
+  .menu .repas__titre {
+    margin-left: 10%;
+  }
+  .menu .repas__titre .icon-heart--gradient {
+    margin: 0 0 2px 80.2%;
+  }
+  .menu .repas__card h2 {
+    font-size: 17px;
+  }
+  .menu .repas__card p {
+    font-size: 15px;
+  }
+  .menu .repas__card__prix {
+    font-size: 15px;
+  }
+  .menu .repas button {
+    margin: 3% auto 0 auto;
   }
 }/*# sourceMappingURL=main.css.map */
