--- a/style/sass/layouts/_footer.scss
+++ b/style/sass/layouts/_footer.scss
@@ -47,14 +47,18 @@ footer{
 
 @include desktop{
     footer{
+        display: flex;
+        align-items: center;
+        width: 100%;
         padding: 2% 0 1% 0;
         h1{
-            margin: 0 0 2% 3%;
+            margin: 0 0 1% 3%;
         }
         ul{
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             margin-right: 5%;
+            width: 100%;
         }
         li{
             white-space: nowrap;
