--- a/style/sass/layouts/_headers.scss
+++ b/style/sass/layouts/_headers.scss
@@ -32,6 +32,10 @@ header{
             width: 250px;
             height: auto;
         }
+        .icon{
+            font-size: 30px;
+            margin: 50px 0 0 10%;
+        }
     }
 }
 
@@ -43,6 +47,10 @@ header{
             width: 240px;
             height: auto;
             padding: 2% 0 2% 0;
+        }
+        .icon{
+            font-size: 30px;
+            margin: 35px 0 0 10%;
         }
     }
 }
