--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -25,7 +25,8 @@
                 margin: 0 0 2px 82.5%;
             }
         }
-        &__categorie{
+        //Titres entrée plat dessert
+        &__categorie_plat{
             display: flex;
             flex-direction: column;
             font-weight: 100;
@@ -38,12 +39,13 @@
                 padding-top: 1%;
             }
         }
+        //Container des cards plats
         &__container{
         display: flex;
         flex-flow: column wrap;
         align-items: center;
         }
-        &__plat{
+        &__card{
             background-color: white;
             border-radius: 20px;
             margin-bottom: 3%;
@@ -63,16 +65,17 @@
                 margin: 3% 0 0 4%;
             }
             p{
-                width: 80%;
-                margin: 1% 0 3% 4%;   
+                width: 82%;
+                margin: 1% 3% 3% 4%;   
                 white-space: nowrap;      
                 text-overflow: ellipsis;  
                 overflow: hidden;
                 font-size: 18px;
             }
             &__prix{
-                width: 10% !important;
+                width: 5%;
                 font-weight: bold;
+                margin-top: 1.5%;
             }
         }
         button{
@@ -94,3 +97,76 @@
 }    
 
 //Version tablette 
+
+@include tablet{
+    .menu{
+        img{
+            height: 350px;
+        }
+        .repas{
+            padding-bottom: 3%;
+            &__titre{
+                width: 85%;
+                margin-left: 10%;
+                .icon-heart--gradient{
+                    margin: 0 0 2px 75%;
+                }
+            }
+            &__card{
+                width: 85%;
+            }
+            &__categorie_plat{
+                margin-left: 10%;
+                &::after{
+                    width: 6%;
+                }
+            }
+            button{
+                margin: 5% auto 5% auto;
+            }
+        }
+    }
+}
+
+//Version desktop
+
+@include desktop{
+    .menu{
+        img{
+            object-position: 75% 75%;
+            height: 450px;
+        }
+        .repas{
+            padding: 2% 0 5% 0;
+            &__container_all{
+                display: flex;
+                justify-content: center;
+            }
+            &__container{
+                &--withtitles{
+                    width: 30%;
+                }
+            }
+            &__titre{
+                margin-left: 10%;
+                .icon-heart--gradient{
+                    margin: 0 0 2px 80.2%;
+                }
+            }
+            &__card{
+                h2{
+                    font-size: 17px;
+                }
+                p{
+                    font-size: 15px;
+                }
+                &__prix{
+                    font-size: 15px;
+                }
+            }
+            button{
+                margin: 3% auto 0 auto;
+            }
+        }
+    }
+}
