--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -102,6 +102,7 @@
     .menu{
         img{
             height: 350px;
+            object-position: 75% 75%;
         }
         .repas{
             padding-bottom: 3%;
