--- a/style/sass/layouts/_loader.scss
+++ b/style/sass/layouts/_loader.scss
@@ -42,9 +42,11 @@
 @keyframes fadeout{
     from{
         z-index: 10;
+        opacity: 0.8;
     }
 
     to{
         z-index: -10;
+        opacity: 0;
     }
 }
