--- a/style/sass/main.scss
+++ b/style/sass/main.scss
@@ -1,5 +1,6 @@
 @import "utils/variables.scss";
 @import "utils/mixins.scss";
+@import "utils/keyframes.scss";
 
 @import "base/norme.scss";
 @import "base/police.scss";
