--- a/style/css/main.css
+++ b/style/css/main.css
@@ -22,24 +22,20 @@
   from {
     width: 2%;
     opacity: 1;
-    transform: scaleX(0);
   }
   to {
     width: 20%;
     opacity: 1;
-    transform: scaleX(1);
   }
 }
 @keyframes coche_verte {
   from {
     width: 2%;
     opacity: 1;
-    transform: scaleX(0);
   }
   to {
     width: 20%;
     opacity: 1;
-    transform: scaleX(1);
   }
 }
 @-webkit-keyframes check {
@@ -717,6 +713,7 @@ button:hover {
   border-radius: 20px;
   margin-bottom: 3%;
   width: 95%;
+  height: 70px;
   display: flex;
   overflow: hidden;
   position: relative;
@@ -771,15 +768,15 @@ button:hover {
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.menu .repas__card h2 {
+.menu .repas__card__text h2 {
   font-size: 19px;
-  margin: 3% 0 0 4%;
+  margin: 12px 0 0 17px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.menu .repas__card p {
-  margin: 1% 3% 3% 4%;
+.menu .repas__card__text p {
+  margin: 4px 0 0 17px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -790,7 +787,7 @@ button:hover {
   font-weight: bold;
   font-size: 17px;
   align-self: flex-end;
-  margin: 0 2% 2.5% 0;
+  margin: 0 2% 3% 0;
 }
 .menu .repas__card .fa-check {
   color: #99E2D0;
@@ -800,7 +797,7 @@ button:hover {
   font-weight: bolder;
   background-color: white;
   position: absolute;
-  margin: 18px 0 0 88%;
+  margin: 21px 0 0 88%;
   z-index: 1;
   transform: translateX(99px) rotate(0);
 }
@@ -813,7 +810,7 @@ button:hover {
   background-color: #99E2D0;
   width: 2%;
   opacity: 0;
-  height: 65px;
+  height: 70px;
   transform-origin: right;
 }
 .menu .repas__card:hover::after {
@@ -843,7 +840,7 @@ button:hover {
   }
   .menu .repas__card {
     width: 85%;
-    height: 85px;
+    height: 80px;
   }
   .menu .repas__card .fa-check {
     margin: 25px 0 0 89%;
@@ -851,13 +848,24 @@ button:hover {
   }
   .menu .repas__card::after {
     content: "";
-    height: 85px;
+    height: 80px;
+  }
+  .menu .repas__card__text {
+    margin: 4px 0 0 7px;
+  }
+  .menu .repas__card__text h2 {
+    font-size: 20px;
+  }
+  .menu .repas__card__text p {
+    font-size: 19px;
+    margin-top: 6px;
   }
   .menu .repas__categorie_plat {
     margin-left: 10%;
+    font-size: 20px;
   }
   .menu .repas__categorie_plat::after {
-    width: 6%;
+    width: 7%;
   }
   .menu .repas button {
     margin: 5% auto 5% auto;
@@ -890,6 +898,7 @@ button:hover {
   }
   .menu .repas__card p {
     font-size: 15px;
+    margin-top: 7px;
   }
   .menu .repas__card__prix {
     font-size: 15px;
