--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -50,6 +50,7 @@
             border-radius: 20px;
             margin-bottom: 3%;
             width: 95%;
+            height: 70px;
             display: flex;
             overflow: hidden;
             position: relative;
@@ -66,27 +67,27 @@
                 white-space: nowrap;      
                 text-overflow: ellipsis;  
                 overflow: hidden;
-            }
-            h2{
-                font-size: 19px;
-                margin: 3% 0 0 4%;
-                white-space: nowrap;      
-                text-overflow: ellipsis;  
-                overflow: hidden;
-            }
-            p{
-                margin: 1% 3% 3% 4%;   
-                white-space: nowrap;      
-                text-overflow: ellipsis;  
-                overflow: hidden;
-                font-size: 18px;
+                h2{
+                    font-size: 19px;
+                    margin: 12px 0 0 17px;
+                    white-space: nowrap;      
+                    text-overflow: ellipsis;  
+                    overflow: hidden;
+                }
+                p{
+                    margin: 4px 0 0 17px;  
+                    white-space: nowrap;      
+                    text-overflow: ellipsis;  
+                    overflow: hidden;
+                    font-size: 18px;
+                }
             }
             &__prix{
                 width: 10%;
                 font-weight: bold;
                 font-size: 17px;
                 align-self: flex-end;
-                margin: 0 2% 2.5% 0;
+                margin: 0 2% 3% 0;
             }
             .fa-check{
                 color: $color-tertiary;
@@ -96,7 +97,7 @@
                 font-weight: bolder;
                 background-color: white;
                 position: absolute;
-                margin: 18px 0 0 88%;
+                margin: 21px 0 0 88%;
                 z-index: 1;
                 transform: translateX(99px) rotate(0);
             }
@@ -110,7 +111,7 @@
                 background-color: $color-tertiary;
                 width: 2%;
                 opacity: 0;
-                height: 65px;
+                height: 70px;
                 transform-origin: right;
             }
             &:hover::after{
@@ -143,20 +144,31 @@
             }
             &__card{
                 width: 85%;
-                height: 85px;
+                height: 80px;
                 .fa-check{
                     margin: 25px 0 0 89%;
                     font-size: 22px;
                 }
                 &::after{
                     content: "";
-                    height: 85px;
+                    height: 80px;
+                }
+                &__text{
+                    margin: 4px 0 0 7px;
+                    h2{
+                        font-size: 20px;
+                    }
+                    p{
+                        font-size: 19px;
+                        margin-top: 6px;
+                    }
                 }
             }
             &__categorie_plat{
                 margin-left: 10%;
+                font-size: 20px;
                 &::after{
-                    width: 6%;
+                    width: 7%;
                 }
             }
             button{
@@ -197,6 +209,7 @@
                 }
                 p{
                     font-size: 15px;
+                    margin-top: 7px;
                 }
                 &__prix{
                     font-size: 15px;
