--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -97,11 +97,13 @@
                 font-weight: bolder;
                 background-color: white;
                 position: absolute;
-                margin: 21px 0 0 88%;
+                margin: 21px 0 0 87.5%;
                 z-index: 1;
                 transform: translateX(99px) rotate(0);
+                animation: check-reverse 1s both;
             }
             &:hover{
+                cursor: pointer;
                 > .fa-check{                    
                     animation: check 1s both;
                 }
@@ -109,16 +111,18 @@
             &::after{
                 content: "";
                 background-color: $color-tertiary;
-                width: 2%;
+                width: 0%;
                 opacity: 0;
                 height: 70px;
+                margin-right: -15px;
                 transform-origin: right;
+                animation: coche_verte-reverse 1s backwards;
             }
             &:hover::after{
-                width: 20%;
+                width: 25%;
                 animation: coche_verte 1s both;
-                }
             }
+        }
         button{
             margin: 10% auto 10% auto;      
         }
@@ -146,7 +150,7 @@
                 width: 85%;
                 height: 80px;
                 .fa-check{
-                    margin: 25px 0 0 89%;
+                    margin: 25px 0 0 88.5%;
                     font-size: 22px;
                 }
                 &::after{
