--- a/style/sass/utils/_keyframes.scss
+++ b/style/sass/utils/_keyframes.scss
@@ -14,11 +14,22 @@
 
 @keyframes coche_verte{
     from{
-        width: 2%;
+        width: 0%;
         opacity: 1;
     }
     to{
-        width: 20%;
+        width: 25%;
+        opacity: 1;
+    }
+}
+
+@keyframes coche_verte-reverse{
+    from{
+        width: 25%;
+        opacity: 1;
+    }
+    to{
+        width: 0%;
         opacity: 1;
     }
 }
@@ -31,5 +42,14 @@
     }
     to{
         transform: translateX(0) rotate(0);
+    }
+}
+
+@keyframes check-reverse{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(99px);
     }
 }
