Mise en cohérence balises titres menus

--- a/style/sass/pages/_menu.scss
+++ b/style/sass/pages/_menu.scss
@@ -31,6 +31,7 @@
             flex-direction: column;
             font-weight: 100;
             font-size: 18px;
+            font-family: $police-txt;
             margin-left: 5%;
             &::after{
                 content: "";
@@ -67,7 +68,7 @@
                 white-space: nowrap;      
                 text-overflow: ellipsis;  
                 overflow: hidden;
-                h2{
+                h3{
                     font-size: 19px;
                     margin: 12px 0 0 17px;
                     white-space: nowrap;      
@@ -157,7 +158,7 @@
                 }
                 &__text{
                     margin: 4px 0 0 7px;
-                    h2{
+                    h3{
                         font-size: 20px;
                     }
                     p{
@@ -206,7 +207,7 @@
                 }
             }
             &__card{
-                h2{
+                h3{
                     font-size: 17px;
                 }
                 p{
