--- a/style/css/main.css
+++ b/style/css/main.css
@@ -109,7 +109,7 @@ h1 {
   font-family: Shrikhand;
 }
 
-p, button, ul, h4, div {
+p, button, ul, div {
   font-family: Roboto;
 }
 
@@ -335,6 +335,7 @@ button {
   border: none;
   font-weight: 500;
   box-shadow: 0px 10px 17px -5px #d4d4d4;
+  cursor: pointer;
 }
 button:hover {
   box-shadow: 0px 10px 17px -5px #8f8f8f;
@@ -724,6 +725,7 @@ button:hover {
   flex-direction: column;
   font-weight: 100;
   font-size: 18px;
+  font-family: Roboto;
   margin-left: 5%;
 }
 .menu .repas__categorie_plat::after {
@@ -797,7 +799,7 @@ button:hover {
   text-overflow: ellipsis;
   overflow: hidden;
 }
-.menu .repas__card__text h2 {
+.menu .repas__card__text h3 {
   font-size: 19px;
   margin: 12px 0 0 17px;
   white-space: nowrap;
@@ -886,7 +888,7 @@ button:hover {
   .menu .repas__card__text {
     margin: 4px 0 0 7px;
   }
-  .menu .repas__card__text h2 {
+  .menu .repas__card__text h3 {
     font-size: 20px;
   }
   .menu .repas__card__text p {
@@ -926,7 +928,7 @@ button:hover {
   .menu .repas__titre .icon-heart--gradient {
     margin: 0 0 2px 80.2%;
   }
-  .menu .repas__card h2 {
+  .menu .repas__card h3 {
     font-size: 17px;
   }
   .menu .repas__card p {
