--- a/style/sass/layouts/_buttons.scss
+++ b/style/sass/layouts/_buttons.scss
@@ -11,6 +11,7 @@ button{
     border: none;
     font-weight: 500;
     box-shadow: $shadow;
+    cursor: pointer;
     &:hover{
         box-shadow: $shadow-dark;
         background: $color-gradient-light;
