--- a/style/sass/layouts/_footer.scss
+++ b/style/sass/layouts/_footer.scss
@@ -8,10 +8,11 @@ footer{
         width: 15px;
         margin-right: 4%;
     }
-    h1{
+    h4{
         font-size: 19px;
         font-weight: 200;        
         margin-left: 10%;
+        font-family: $police-title;
     }
     a{
         color: white;
